--- a/facebook-rateme.html
+++ b/facebook-rateme.html
@@ -72,14 +72,18 @@
 	  }
 
 	  function getPhotos(id) {
-		var count_likes = 0;
+		var photo_name,
+			count_likes = 0;
 
 		FB.api('/' + id + '/photos', function(response) {
 			$.each(response.data, function(i, photo) {
 				$.each(photo.images, function(i, images) {
 					if (~images.source.indexOf('320x320')) {
 						count_likes = (photo.likes ? photo.likes.data.length : 0);
-						photosList.push('<li data-likes="' + count_likes + '"><a href="' + images.source + '" class="photo"><span class="likes">' + count_likes + '</span><span class="name">' + photo.name + '</span><img src=' + images.source + ' alt="' + photo.name + '" class="image"></a></li>');
+						if (photo.name) {
+						  photo_name = '<span class="name">' + photo.name + '</span>';
+						}
+						photosList.push('<li data-likes="' + count_likes + '"><a href="' + images.source + '" class="photo"><span class="likes">' + count_likes + '</span>' + photo_name + '<img src=' + images.source + ' alt="' + photo.name + '" class="image"></a></li>');
 					}
 				});
 			});
