--- a/index.html
+++ b/index.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>Rodrigo Castilho aka RODCAST | GitHub User Page</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="title" content="Rodrigo Castilho aka RODCAST | Front End Engineer and SEO Specialist" />
-<meta name="description" content="Rodrigo Castilho aka RODCAST, Front End Engineer and SEO Specialist, Brazilian, 29 years old." />
-<meta name="keywords" content="rodrigo, castilho, rodcast, xhtml, html, css, seo, javascript, ajax, web" />
-<meta name="robots" content="index,follow" />
-<meta name="robots" content="noodp" />
-<meta name="robots" content="noarchive" />
-<meta name="revisit-after" content="7 days" />
-<meta name="MSSmartTagsPreventParsing" content="true" />
-<base href="http://www.rodrigocastilho.com/" />
-<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-<link href="/apple-touch-icon.png" rel="apple-touch-icon" />
-<link href="http://www.rodrigocastilho.com/" rel="start" />
-<link href="/css/rodcast-min.css" rel="stylesheet" type="text/css" />
-<link rel="canonical" href="http://www.rodrigocastilho.com/" />
-</head>
+  <head>
+    <title>Rodrigo Castilho aka RODCAST | GitHub User Page</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="title" content="Rodrigo Castilho aka RODCAST | Front End Engineer and SEO Specialist" />
+    <meta name="description" content="Rodrigo Castilho aka RODCAST, Front End Engineer and SEO Specialist, Brazilian, 29 years old." />
+    <meta name="keywords" content="rodrigo, castilho, rodcast, xhtml, html, css, seo, javascript, ajax, web" />
+    <meta name="robots" content="index,follow" />
+    <meta name="robots" content="noodp" />
+    <meta name="robots" content="noarchive" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="MSSmartTagsPreventParsing" content="true" />
+    <base href="http://www.rodrigocastilho.com/" />
+    <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="http://www.rodrigocastilho.com/" rel="start" />
+    <link href="/css/rodcast-min.css" rel="stylesheet" type="text/css" />
+    <link rel="canonical" href="http://www.rodrigocastilho.com/" />
+  </head>
 <body>
 
 <div id="container">
-	<div id="main">
-		<div id="header">
-			<h1 class="logo"><span>Rodrigo Castilho (Front End Engineer) |</span> RODCAST</h1>
-			<h1 class="description">Find me on <a href="http://github.com/rodcast" title="Github" rel="external">Github</a>, <a href="http://twitter.com/rodcast" title="Twitter" rel="external">Twitter</a> and <a href="http://linkedin.com/in/rodcast" title="LinkedIn" rel="external">LinkedIn</a> or contact me directly by <a href="http://www.rodrigocastilho.com/" title="Rodrigo Castilho">rodrigocastilho.com</a></h1>
-		</div>
-		<div id="content">
-			<div id="github-badge">
-				<h2 id="github-title"><span class="title">My projects on Github (<a href="http://github.com/rodcast" target="blank" rel="external">rodcast</a>)</span></h2>
-				<div class="body">
-					<div class="repos">
-						<ul id="repo_listing">
-							<li><strong>Loading...</strong></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+  <div id="main">
+    <div id="header">
+      <h1 class="logo"><span>Rodrigo Castilho (Front End Engineer) |</span> RODCAST</h1>
+      <h1 class="description">Find me on <a href="http://github.com/rodcast" title="Github" rel="external">Github</a>, <a href="http://twitter.com/rodcast" title="Twitter" rel="external">Twitter</a> and <a href="http://linkedin.com/in/rodcast" title="LinkedIn" rel="external">LinkedIn</a> or contact me directly by <a href="http://www.rodrigocastilho.com/" title="Rodrigo Castilho">rodrigocastilho.com</a></h1>
+    </div>
+    <div id="content">
+      <div id="github-badge">
+        <h2 id="github-title"><span class="title">My projects on Github (<a href="http://github.com/rodcast" target="blank" rel="external">rodcast</a>)</span></h2>
+        <div class="body">
+          <div class="repos">
+            <ul id="repo-listing">
+              <li><strong>Loading...</strong></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="/js/github.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="https://raw.github.com/rodcast/rodcast.github.com/master/js/github.min.js"></script>
 
 </body>
 </html>
