--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
-<html class="no-js" lang="pt-br" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <title>Rodrigo Castilho aka RODCAST</title>
-</head>
+---
+layout: default
+---
 
-  <ul id="repo-listing">
-    <li><strong>Loading...</strong></li>
-  </ul>
+<header>
+  <h1>Hey ya!<br> Meu nome é <span>Anderson Leite</span><br> e este é meu blog. </h1>
+  
+  <p>Trabalho em uma agência digital chamada <a href="http://www.rga.com" target="blank"><span>R/GA</span></a>.<br>
+  Sou desenvolvedor web e gosto de coisas como Ruby,  Rails, Frontend, Android e Design.</p>
+  
+</header> 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="https://raw.github.com/rodcast/rodcast.github.com/master/js/github.min.js"></script>
+<ul id="nav">
+{% for post in site.posts limit:6 %}
+  <li class="featured">
+    <a href="{{ post.url }}">
+      <i class="icn-{{ post.image }}"></i>  
+      <p>{{ post.title }}</p>
+      <aside>{{ post.date | date: "%d %B %Y" }}</aside>
+    </a>
+  </li>
+{% endfor %}
+</ul>
 
-</body>
-</html>
+<ul>
+{% for post in site.posts offset:6 %}
+  <li>
+    <a href="{{ post.url }}">
+      <p>{{ post.title }}</p>
+      <aside>{{ post.date | date: "%d %B %Y" }}</aside>
+    </a>
+  </li>
+{% endfor %}
+</ul>
