--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="utf-8">
     <title>Rodrigo Castilho (rodcast): Senior Front End Engineer, JavaScript Engineer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700" rel="stylesheet" type="text/css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="description" content="Rodrigo Castilho aka RODCAST, Front End Engineer, JavaScript Engineer and SEO Specialist working daily with HTML5, CSS3, JavaScript, Performance, Optimizing, Acessibility and SEO.">
+    <meta name="keywords" content="rodrigo, castilho, rodcast, html5, css3, javascript, ajax, seo, acessibility, usability">
+    <meta name="robots" content="index,follow">
+    <meta name="robots" content="noodp">
+    <meta name="robots" content="noarchive">
+    <meta name="revisit-after" content="7 days">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet" type="text/css">
     <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link rel="publisher" href="https://plus.google.com/+RodrigoCastilhoRODCAST/"/>
   </head>
   <body>
 
