--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="noarchive">
     <meta name="revisit-after" content="7 days">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet" type="text/css">
-    <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link href="/css/style.min.css" rel="stylesheet" type="text/css">
     <link rel="publisher" href="https://plus.google.com/+RodrigoCastilhoRODCAST/"/>
   </head>
   <body>
@@ -38,6 +38,15 @@
 
   <script src="/js/jquery.min.js"></script>
   <script src="/js/github.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-1620654-3', 'rodrigocastilho.com');
+    ga('send', 'pageview');
+  </script>
 
   </body>
 </html>
