--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <script src="/js/jquery.min.js"></script>
-  <script src="/js/github.js"></script>
+  <script src="/js/github.min.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
