--- a/index.html
+++ b/index.html
@@ -21,13 +21,6 @@
 
     <header class="header" role="banner">
       <span class="logo">RODCAST</span>
-      <nav class="navigation" role="navigation">
-        <ul class="navigation-items">
-          <li><a href="/about">About</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
     </header>
 
     <!-- http://www.williambrownstreet.net/blog/ -->
@@ -50,7 +43,7 @@
     </article>
 
     <footer class="footer" role="contentinfo">
-      &copy; 2014 RODCAST
+      &copy; 2014 RODCAST. Built on Jekyll. Hosted on GitHub.
     </footer>
 
   </div>
