--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <meta name="robots" content="noodp">
     <meta name="robots" content="noarchive">
     <meta name="revisit-after" content="7 days">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" type="text/css">
     <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link href="/css/fontello.css" rel="stylesheet" type="text/css">
     <link href="https://plus.google.com/+RodrigoCastilhoRODCAST" rel="publisher">
   </head>
   <body>
@@ -23,33 +24,35 @@
       <span class="logo">RODCAST</span>
     </header>
 
-    <!-- http://www.williambrownstreet.net/blog/ -->
-    <aside class="profile" itemscope itemtype="http://microformats.org/profile/hcard" role="complementary">
-      <img src="http://1.gravatar.com/avatar/ec59e935e84fae770612af3baecd1843" alt="Picture of Rodrigo Castilho (RODCAST)" class="profile-photo" itemprop="photo">
-      <span class="profile-name" itemprop="fn">Rodrigo Castilho <span itemprop="nickname">(RODCAST)</span></span>
-      <span class="profile-description">Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.</span>
-      <ul class="profile-social">
-        <li class="social-github"><a href="https://github.com/rodcast"></a></li>
-        <li class="social-gplus"><a href="https://plus.google.com/+RodrigoCastilhoRODCAST"></a></li>
-        <li class="social-twitter"><a href="https://twitter.com/rodcast"></a></li>
-      </ul>
-    </aside>
-    
-    <article class="repos" role="main">
-      <header class="repos-head">My repositories (public) hosted on Github</header>
-      <ol class="repos-list">
-        <li class="repos-loading">Loading...</li>
-      </ol>
-    </article>
+    <div class="main" role="main">
+      <aside class="profile" itemscope itemtype="http://microformats.org/profile/hcard" role="complementary">
+        <img src="http://1.gravatar.com/avatar/ec59e935e84fae770612af3baecd1843" alt="Picture of Rodrigo Castilho (RODCAST)" class="profile-photo" itemprop="photo">
+        <h1 class="profile-name" itemprop="fn">Rodrigo Castilho <span itemprop="nickname">(RODCAST)</span></h1>
+        <h2 class="profile-description">Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.</h2>
+        <ul class="profile-social">
+          <li class="profile-social-icon"><a href="https://github.com/rodcast" title=""><i class="icon-github"></i><span class="i-code">0xe800</span></a></li>
+          <li class="profile-social-icon"><a href="https://plus.google.com/+RodrigoCastilhoRODCAST"><i class="icon-gplus"></i><span class="i-code">0xe802</span></a></li>
+          <li class="profile-social-icon"><a href="https://linkedin.com/in/rodcast"><i class="icon-linkedin"></i><span class="i-code">0xe803</span></a></li>
+          <li class="profile-social-icon"><a href="https://twitter.com/rodcast"><i class="icon-twitter"></i><span class="i-code">0xe801</span></a></li>
+        </ul>
+      </aside>
+      
+      <article class="repos">
+        <header class="repos-head">My repositories (public) hosted on Github</header>
+        <ol class="repos-list">
+          <li class="repos-loading">Loading...</li>
+        </ol>
+      </article>
+    </div>
 
     <footer class="footer" role="contentinfo">
-      &copy; 2014 RODCAST. Built on Jekyll. Hosted on GitHub.
+      &copy; 2014 RODCAST. Hosted on GitHub.
     </footer>
 
   </div>
 
   <script src="/js/jquery.min.js"></script>
-  <script async src="/js/github.min.js"></script>
+  <script src="/js/github.min.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
