--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <meta name="robots" content="noarchive">
     <meta name="revisit-after" content="7 days">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" type="text/css">
-    <link href="/css/style.css" rel="stylesheet" type="text/css">
-    <link href="/css/fontello.css" rel="stylesheet" type="text/css">
+    <link href="/css/style-min.css" rel="stylesheet" type="text/css">
     <link href="https://plus.google.com/+RodrigoCastilhoRODCAST" rel="publisher">
   </head>
   <body>
@@ -30,10 +29,10 @@
         <h1 class="profile-name" itemprop="fn">Rodrigo Castilho <span itemprop="nickname">(RODCAST)</span></h1>
         <h2 class="profile-description">Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.</h2>
         <ul class="profile-social">
-          <li class="profile-social-icon"><a href="https://github.com/rodcast" title=""><i class="icon-github"></i><span class="i-code">0xe800</span></a></li>
-          <li class="profile-social-icon"><a href="https://plus.google.com/+RodrigoCastilhoRODCAST"><i class="icon-gplus"></i><span class="i-code">0xe802</span></a></li>
-          <li class="profile-social-icon"><a href="https://linkedin.com/in/rodcast"><i class="icon-linkedin"></i><span class="i-code">0xe803</span></a></li>
-          <li class="profile-social-icon"><a href="https://twitter.com/rodcast"><i class="icon-twitter"></i><span class="i-code">0xe801</span></a></li>
+          <li class="profile-social-icon"><a href="https://github.com/rodcast" title="Follow me on Github"><i class="icon-github"></i><span class="i-code">0xe800</span></a></li>
+          <li class="profile-social-icon"><a href="https://plus.google.com/+RodrigoCastilhoRODCAST" title="Follow me on Github"><i class="icon-gplus"></i><span class="i-code">0xe802</span></a></li>
+          <li class="profile-social-icon"><a href="https://linkedin.com/in/rodcast" title="Follow me on Github"><i class="icon-linkedin"></i><span class="i-code">0xe803</span></a></li>
+          <li class="profile-social-icon"><a href="https://twitter.com/rodcast" title="Follow me on Twitter"><i class="icon-twitter"></i><span class="i-code">0xe801</span></a></li>
         </ul>
       </aside>
       
