Add mobile version

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <title>Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="Rodrigo Castilho aka RODCAST, Front End Engineer, JavaScript Engineer and SEO Specialist working daily with HTML5, CSS3, JavaScript, Performance, Optimizing, Acessibility and SEO.">
     <meta name="keywords" content="rodrigo, castilho, rodcast, html5, css3, javascript, ajax, seo, acessibility, usability">
     <meta name="robots" content="index,follow">
     <meta name="robots" content="noodp">
     <meta name="robots" content="noarchive">
     <meta name="revisit-after" content="7 days">
+    <link href="/favicon.ico" rel="shortcut icon">
+    <link href="http://rodrigocastilho.com/" rel="canonical">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" type="text/css">
     <link href="/css/style-min.css" rel="stylesheet" type="text/css">
     <link href="https://plus.google.com/+RodrigoCastilhoRODCAST" rel="publisher">
@@ -30,12 +31,12 @@
         <h2 class="profile-description">Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.</h2>
         <ul class="profile-social">
           <li class="profile-social-icon"><a href="https://github.com/rodcast" title="Follow me on Github"><i class="icon-github"></i><span class="i-code">0xe800</span></a></li>
-          <li class="profile-social-icon"><a href="https://plus.google.com/+RodrigoCastilhoRODCAST" title="Follow me on Github"><i class="icon-gplus"></i><span class="i-code">0xe802</span></a></li>
-          <li class="profile-social-icon"><a href="https://linkedin.com/in/rodcast" title="Follow me on Github"><i class="icon-linkedin"></i><span class="i-code">0xe803</span></a></li>
+          <li class="profile-social-icon"><a href="https://plus.google.com/+RodrigoCastilhoRODCAST" title="Follow me on Google+"><i class="icon-gplus"></i><span class="i-code">0xe802</span></a></li>
+          <li class="profile-social-icon"><a href="https://linkedin.com/in/rodcast" title="Follow me on Linkedin"><i class="icon-linkedin"></i><span class="i-code">0xe803</span></a></li>
           <li class="profile-social-icon"><a href="https://twitter.com/rodcast" title="Follow me on Twitter"><i class="icon-twitter"></i><span class="i-code">0xe801</span></a></li>
         </ul>
       </aside>
-      
+
       <article class="repos">
         <header class="repos-head">My repositories (public) hosted on Github</header>
         <ol class="repos-list">
