--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rodrigo Castilho aka RODCAST, Front End Engineer, JavaScript Engineer and SEO Specialist working daily with HTML5, CSS3, JavaScript, Performance, Optimizing, Acessibility and SEO.">
     <meta name="keywords" content="rodrigo, castilho, rodcast, html5, css3, javascript, ajax, seo, acessibility, usability">
@@ -13,7 +14,7 @@
     <link href="/favicon.ico" rel="shortcut icon">
     <link href="http://rodrigocastilho.com/" rel="canonical">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" type="text/css">
-    <link href="/css/style-min.css" rel="stylesheet" type="text/css">
+    <link href="/css/style.min.css" rel="stylesheet" type="text/css">
     <link href="https://plus.google.com/+RodrigoCastilhoRODCAST" rel="publisher">
   </head>
   <body>
@@ -51,8 +52,7 @@
 
   </div>
 
-  <script src="/js/jquery.min.js"></script>
-  <script src="/js/github.min.js"></script>
+  <script src="/js/application.min.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
