--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rodrigo Castilho aka RODCAST, Front End Engineer, JavaScript Engineer and SEO Specialist working daily with HTML5, CSS3, JavaScript, Performance, Optimizing, Acessibility and SEO.">
     <meta name="keywords" content="rodrigo, castilho, rodcast, html5, css3, javascript, ajax, seo, acessibility, usability">
@@ -61,6 +62,14 @@
 
     ga('create', 'UA-1620654-3', 'rodrigocastilho.com');
     ga('send', 'pageview');
+  </script>
+  <script type="application/x-javascript">
+    addEventListener('load', function() {
+      setTimeout(hideAddressBar, 0);
+    }, false);
+    function hideAddressBar() {
+      window.scrollTo(0, 1);
+    }
   </script>
 
   </body>
