--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <meta name="twitter:creator" content="@rodcast">
 
     <meta property="og:url" content="http://rodrigocastilho.com/">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="http://s.wordpress.com/mshots/v1/http%3A%2F%2Frodrigocastilho.com%2F?w=360">
     <meta property="og:title" content="Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer">
     <meta property="og:description" content="Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.">
