--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rodcast">
-    <meta name="twitter:image" content="http://s.wordpress.com/mshots/v1/http%3A%2F%2Frodrigocastilho.com%2F?w=360">
     <meta name="twitter:title" content="Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer">
     <meta name="twitter:description" content="Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.">
     <meta name="twitter:creator" content="@rodcast">
+    <meta name="twitter:image" content="http://s.wordpress.com/mshots/v1/http%3A%2F%2Frodrigocastilho.com%2F?w=360">
 
-    <meta property="og:url" content="http://rodrigocastilho.com/">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://s.wordpress.com/mshots/v1/http%3A%2F%2Frodrigocastilho.com%2F?w=360">
+    <meta property="og:url" content="http://rodrigocastilho.com/">
     <meta property="og:title" content="Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer">
     <meta property="og:description" content="Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.">
+    <meta property="og:image" content="http://s.wordpress.com/mshots/v1/http%3A%2F%2Frodrigocastilho.com%2F?w=360">
+    <meta property="og:site_name" content="Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer">
     <meta property="fb:admins" content="100001909518394">
 
     <link href="/favicon.ico" rel="shortcut icon">
