--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <meta name="twitter:description" content="Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.">
     <meta name="twitter:creator" content="@rodcast">
     <meta name="twitter:image" content="http://s.wordpress.com/mshots/v1/http%3A%2F%2Frodrigocastilho.com%2F?w=360">
+    <meta name="twitter:domain" content="http://rodrigocastilho.com/">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://rodrigocastilho.com/">
