Add social tags and Schema data

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <meta name="robots" content="noarchive">
     <meta name="revisit-after" content="7 days">
 
+    <link rel="author" href="https://plus.google.com/+RodrigoCastilhoRODCAST/posts">
+    <link rel="publisher" href="https://plus.google.com/+RodrigoCastilhoRODCAST">
+
     <meta itemprop="name" content="Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer">
     <meta itemprop="description" content="Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.">
     <meta itemprop="image" content="http://s.wordpress.com/mshots/v1/http%3A%2F%2Frodrigocastilho.com%2F?w=360">
@@ -40,8 +43,6 @@
     
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" type="text/css">
     <link href="/css/style.min.css" rel="stylesheet" type="text/css">
-    
-    <link href="https://plus.google.com/+RodrigoCastilhoRODCAST" rel="publisher">
   </head>
   <body>
 
