--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     <meta property="og:description" content="Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.">
     <meta property="og:image" content="http://s.wordpress.com/mshots/v1/http%3A%2F%2Frodrigocastilho.com%2F?w=360">
     <meta property="og:site_name" content="Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer">
-    <meta property="fb:admins" content="100001909518394">
 
     <link href="/favicon.ico" rel="shortcut icon">
     
@@ -58,10 +57,10 @@
         <h1 class="profile-name" itemprop="name">Rodrigo Castilho <span itemprop="alternateName">(RODCAST)</span></h1>
         <h2 class="profile-description" itemprop="description">Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.</h2>
         <ul class="profile-social">
-          <li class="profile-social-icon"><a href="https://github.com/rodcast" rel="external" title="Follow me on Github"><i class="icon-github"></i><span class="i-code">0xe800</span></a></li>
-          <li class="profile-social-icon"><a href="https://plus.google.com/+RodrigoCastilhoRODCAST" rel="external" title="Follow me on Google+"><i class="icon-gplus"></i><span class="i-code">0xe802</span></a></li>
-          <li class="profile-social-icon"><a href="https://linkedin.com/in/rodcast" rel="external" title="Follow me on Linkedin"><i class="icon-linkedin"></i><span class="i-code">0xe803</span></a></li>
-          <li class="profile-social-icon"><a href="https://twitter.com/rodcast" rel="external" title="Follow me on Twitter"><i class="icon-twitter"></i><span class="i-code">0xe801</span></a></li>
+          <li class="profile-social-icon"><a href="https://github.com/rodcast" rel="me" title="Follow me on Github"><i class="icon-github"></i><span class="i-code">0xe800</span></a></li>
+          <li class="profile-social-icon"><a href="https://plus.google.com/+RodrigoCastilhoRODCAST" rel="author" title="Follow me on Google+"><i class="icon-gplus"></i><span class="i-code">0xe802</span></a></li>
+          <li class="profile-social-icon"><a href="https://linkedin.com/in/rodcast" rel="me" title="Follow me on Linkedin"><i class="icon-linkedin"></i><span class="i-code">0xe803</span></a></li>
+          <li class="profile-social-icon"><a href="https://twitter.com/rodcast" rel="me" title="Follow me on Twitter"><i class="icon-twitter"></i><span class="i-code">0xe801</span></a></li>
         </ul>
       </aside>
 
