--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <meta name="robots" content="noarchive">
     <meta name="revisit-after" content="7 days">
 
-    <link rel="author" href="https://plus.google.com/+RodrigoCastilhoRODCAST/posts">
     <link rel="publisher" href="https://plus.google.com/+RodrigoCastilhoRODCAST">
 
     <meta itemprop="name" content="Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer">
@@ -58,7 +57,7 @@
         <h2 class="profile-description" itemprop="description">Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.</h2>
         <ul class="profile-social">
           <li class="profile-social-icon"><a href="https://github.com/rodcast" rel="me" title="Follow me on Github"><i class="icon-github"></i><span class="i-code">0xe800</span></a></li>
-          <li class="profile-social-icon"><a href="https://plus.google.com/+RodrigoCastilhoRODCAST" rel="author" title="Follow me on Google+"><i class="icon-gplus"></i><span class="i-code">0xe802</span></a></li>
+          <li class="profile-social-icon"><a href="https://plus.google.com/+RodrigoCastilhoRODCAST?rel=author" rel="author" title="Follow me on Google+"><i class="icon-gplus"></i><span class="i-code">0xe802</span></a></li>
           <li class="profile-social-icon"><a href="https://linkedin.com/in/rodcast" rel="me" title="Follow me on Linkedin"><i class="icon-linkedin"></i><span class="i-code">0xe803</span></a></li>
           <li class="profile-social-icon"><a href="https://twitter.com/rodcast" rel="me" title="Follow me on Twitter"><i class="icon-twitter"></i><span class="i-code">0xe801</span></a></li>
         </ul>
