Add social tags and Schema data

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <meta property="og:description" content="Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.">
     <meta property="og:image" content="http://s.wordpress.com/mshots/v1/http%3A%2F%2Frodrigocastilho.com%2F?w=200">
     <meta property="og:site_name" content="Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer">
+    <meta property="fb:admins" content="10150126622353758">
 
     <link href="/favicon.ico" rel="shortcut icon">
     
