--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="utf-8">
     <title>Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
-<<<<<<< HEAD
-=======
-    
->>>>>>> dcb012bf1cf8bc83c65bb286d119ab972c610746
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <meta name="description" content="Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.">
     <meta name="keywords" content="rodrigo, castilho, rodcast, html5, css3, javascript, ajax, seo, acessibility, usability">
     <meta name="robots" content="index,follow">
@@ -55,7 +52,7 @@
 
     <div class="main" role="main">
       <aside class="profile" role="complementary">
-        <img src="http://1.gravatar.com/avatar/ec59e935e84fae770612af3baecd1843" alt="Picture of Rodrigo Castilho (RODCAST)" class="profile-photo" rel="image" itemprop="image">
+        <img src="http://1.gravatar.com/avatar/ec59e935e84fae770612af3baecd1843" alt="Rodrigo Castilho (RODCAST)" class="profile-photo" rel="image" itemprop="image">
         <h1 class="profile-name" itemprop="name">Rodrigo Castilho <span itemprop="alternateName">(RODCAST)</span></h1>
         <h2 class="profile-description" itemprop="description">Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.</h2>
         <ul class="profile-social">
