Refactor and Pinterest

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta name="robots" content="noarchive">
     <meta name="revisit-after" content="7 days">
 
+    <meta name="p:domain_verify" content="549ac5a7706bffa31551be5839e9e13c">
+
     <link rel="publisher" href="https://plus.google.com/+RodrigoCastilhoRODCAST">
 
     <meta itemprop="name" content="Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer">
