--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <aside class="profile" role="complementary">
         <img src="http://1.gravatar.com/avatar/ec59e935e84fae770612af3baecd1843" alt="Rodrigo Castilho (RODCAST)" class="profile-photo" rel="image" itemprop="image">
         <h1 class="profile-name" itemprop="name">Rodrigo Castilho <span itemprop="alternateName">(RODCAST)</span></h1>
-        <h2 class="profile-description" itemprop="description">Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.</h2>
+        <h2 class="profile-description" itemprop="description">Senior Front End Engineer, JavaScript Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, Performance, SEO, WAI-ARIA, etc.</h2>
         <ul class="profile-social">
           <li class="profile-social-icon"><a href="https://github.com/rodcast" rel="me" title="Follow me on Github"><i class="icon-github"></i><span class="i-code">0xe800</span></a></li>
           <li class="profile-social-icon"><a href="https://plus.google.com/+RodrigoCastilhoRODCAST?rel=author" rel="author" title="Follow me on Google+"><i class="icon-gplus"></i><span class="i-code">0xe802</span></a></li>
