--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   </div>
 
-  <iframe src="http://www.curtomesmo.com.br" style="width:1000px;height:2600px;" frameborder="0" scrolling="no"></iframe>
+  <iframe src="http://www.curtomesmo.com.br" style="width:1000px;height:2600px;" frameborder="0" scrolling="no" sandbox></iframe>
 
   <script src="/js/application.min.js"></script>
   <script>
