--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <meta name="p:domain_verify" content="549ac5a7706bffa31551be5839e9e13c">
 
-    <meta http-equiv="X-Frame-Options" content="ALLOW">
+    <meta http-equiv="X-Frame-Options" content="deny">
 
     <link rel="publisher" href="https://plus.google.com/+RodrigoCastilhoRODCAST">
 
