Test IFrame sandbox

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html lang="en" dir="ltr" itemscope itemtype="http://schema.org/Person">
   <head>
     <meta charset="utf-8">
@@ -16,7 +16,7 @@
 
     <meta name="p:domain_verify" content="549ac5a7706bffa31551be5839e9e13c">
 
-    <meta http-equiv="X-Frame-Options" content="deny">
+    <meta http-equiv="X-Frame-Options" content="DENY">
 
     <link rel="publisher" href="https://plus.google.com/+RodrigoCastilhoRODCAST">
 
