Test IFrame sandbox

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 
     <meta name="p:domain_verify" content="549ac5a7706bffa31551be5839e9e13c">
 
-    <meta http-equiv="X-Frame-Options" content="Allow-From https://www.curtomesmo.com.br">
-
     <link rel="publisher" href="https://plus.google.com/+RodrigoCastilhoRODCAST">
 
     <meta itemprop="name" content="Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer">
@@ -81,7 +79,7 @@
 
   </div>
 
-  <iframe src="http://www.curtomesmo.com.br" style="width:1000px;height:2600px;" frameborder="0" scrolling="no"></iframe>
+  <iframe src="http://www.curtomesmo.com.br" style="width:1000px;height:2600px;" frameborder="0" scrolling="no" sandbox></iframe>
 
   <script src="/js/application.min.js"></script>
   <script>
