--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <link href="http://rodrigocastilho.com/" rel="canonical">
     
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" type="text/css">
-    <link href="/css/application.min.css" rel="stylesheet" type="text/css">
+    <link href="/css/application.css" rel="stylesheet" type="text/css">
   </head>
   <body>
 
@@ -79,7 +79,7 @@
 
   </div>
 
-  <script src="/js/application.min.js"></script>
+  <script src="/js/application.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
