--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         <h1 class="profile-name" itemprop="name">Rodrigo Castilho <span itemprop="alternateName">(RODCAST)</span></h1>
         <h2 class="profile-description" itemprop="description">Senior Front End Engineer, JavaScript Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, Performance, SEO, WAI-ARIA, etc.</h2>
         <ul class="profile-social">
-          <li class="profile-social-icon"><a href="https://github.com/rodcast" rel="me" title="Follow me on Github"><i class="icon-github"></i><span class="i-code">0xe800</span></a></li>
-          <li class="profile-social-icon"><a href="https://plus.google.com/+RodrigoCastilhoRODCAST?rel=author" rel="author" title="Follow me on Google+"><i class="icon-gplus"></i><span class="i-code">0xe802</span></a></li>
-          <li class="profile-social-icon"><a href="https://linkedin.com/in/rodcast" rel="me" title="Follow me on Linkedin"><i class="icon-linkedin"></i><span class="i-code">0xe803</span></a></li>
-          <li class="profile-social-icon"><a href="https://twitter.com/rodcast" rel="me" title="Follow me on Twitter"><i class="icon-twitter"></i><span class="i-code">0xe801</span></a></li>
+          <li class="profile-social-item"><a href="https://github.com/rodcast" rel="me" title="Follow me on Github"><i class="icon-github"></i><span class="i-code">0xe800</span></a></li>
+          <li class="profile-social-item"><a href="https://plus.google.com/+RodrigoCastilhoRODCAST?rel=author" rel="author" title="Follow me on Google+"><i class="icon-gplus"></i><span class="i-code">0xe802</span></a></li>
+          <li class="profile-social-item"><a href="https://linkedin.com/in/rodcast" rel="me" title="Follow me on Linkedin"><i class="icon-linkedin"></i><span class="i-code">0xe803</span></a></li>
+          <li class="profile-social-item"><a href="https://twitter.com/rodcast" rel="me" title="Follow me on Twitter"><i class="icon-twitter"></i><span class="i-code">0xe801</span></a></li>
         </ul>
       </aside>
 
