--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 
     <meta name="p:domain_verify" content="549ac5a7706bffa31551be5839e9e13c">
 
-    <link rel="publisher" href="https://plus.google.com/+RodrigoCastilhoRODCAST">
-
     <meta itemprop="name" content="Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer">
     <meta itemprop="description" content="Senior Front End Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, SEO, WAI-ARIA, etc... Bodybuilding is my lifestyle.">
     <meta itemprop="image" content="http://s.wordpress.com/mshots/v1/http://rodrigocastilho.com/?w=200&h=200">
@@ -41,7 +39,9 @@
     
     <link href="http://rodrigocastilho.com/" rel="canonical">
     
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link href="/css/application.css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -56,10 +56,9 @@
       <aside class="profile" role="complementary">
         <img src="http://1.gravatar.com/avatar/ec59e935e84fae770612af3baecd1843" alt="Rodrigo Castilho (RODCAST)" class="profile-photo" rel="image" itemprop="image">
         <h1 class="profile-name" itemprop="name">Rodrigo Castilho <span itemprop="alternateName">(RODCAST)</span></h1>
-        <h2 class="profile-description" itemprop="description">Senior Front End Engineer, JavaScript Engineer at @RGA, Ex-Yahoo! in a serious relationship with HTML5, CSS3, JavaScript, Performance, SEO, WAI-ARIA, etc.</h2>
+        <h2 class="profile-description" itemprop="description">Staff Frontend Engineer and ex-@Yahoo in a serious relationship with programming languages and the gym.</h2>
         <ul class="profile-social">
           <li class="profile-social-item"><a href="https://github.com/rodcast" rel="me" title="Follow me on Github"><i class="icon-github"></i><span class="i-code">0xe800</span></a></li>
-          <li class="profile-social-item"><a href="https://plus.google.com/+RodrigoCastilhoRODCAST?rel=author" rel="author" title="Follow me on Google+"><i class="icon-gplus"></i><span class="i-code">0xe802</span></a></li>
           <li class="profile-social-item"><a href="https://linkedin.com/in/rodcast" rel="me" title="Follow me on Linkedin"><i class="icon-linkedin"></i><span class="i-code">0xe803</span></a></li>
           <li class="profile-social-item"><a href="https://twitter.com/rodcast" rel="me" title="Follow me on Twitter"><i class="icon-twitter"></i><span class="i-code">0xe801</span></a></li>
         </ul>
@@ -71,10 +70,17 @@
           <li class="repos-loading">Loading...</li>
         </ol>
       </article>
+
+      <article class="repos">
+        <header class="repos-head">See my articles on Medium</header>
+        <ol class="repos-list">
+          <li class="repos-loading"><a href="https://medium.com/@rodcast" rel="me" title="Follow me on Medium">https://medium.com/@rodcast</a></li>
+        </ol>
+      </article>
     </div>
 
     <footer class="footer" role="contentinfo">
-      &copy; 2014 RODCAST. Hosted on GitHub.
+      &copy; RODCAST. Hosted on GitHub.
     </footer>
 
   </div>
