--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr" itemscope itemtype="http://schema.org/Person">
   <head>
     <meta charset="utf-8">
-    <title>Rodrigo Castilho (RODCAST): Senior Front End Engineer, JavaScript Engineer</title>
+    <title>Rodrigo Castilho (RODCAST)</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
