--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
         <h1 class="profile-name" itemprop="name">Rodrigo Castilho <span itemprop="alternateName">(RODCAST)</span></h1>
         <h2 class="profile-description" itemprop="description">Staff Frontend Engineer and ex-@Yahoo in a serious relationship with programming languages and the gym.</h2>
         <ul class="profile-social">
-          <li class="profile-social-item"><a href="https://github.com/rodcast" rel="me" title="Follow me on Github"><i class="icon-github"></i><span class="i-code">0xe800</span></a></li>
-          <li class="profile-social-item"><a href="https://linkedin.com/in/rodcast" rel="me" title="Follow me on Linkedin"><i class="icon-linkedin"></i><span class="i-code">0xe803</span></a></li>
-          <li class="profile-social-item"><a href="https://twitter.com/rodcast" rel="me" title="Follow me on Twitter"><i class="icon-twitter"></i><span class="i-code">0xe801</span></a></li>
+          <li class="profile-social-item"><a href="https://github.com/rodcast" rel="me" title="Follow me on Github"><i class="icon-github"></i><span class="i-code">0xf09b</span></a></li>
+          <li class="profile-social-item"><a href="https://twitter.com/rodcast" rel="me" title="Follow me on Twitter"><i class="icon-twitter"></i><span class="i-code">0xf099</div></span></a></li>
+          <li class="profile-social-item"><a href="https://linkedin.com/in/rodcast" rel="me" title="Follow me on Linkedin"><i class="icon-linkedin"></i><span class="i-code">0xf30c</span></a></li>
+          <li class="profile-social-item"><a href="https://medium.com/@rodcast" rel="me" title="Follow me on Medium"><i class="icon-medium"></i><span class="i-code">0xf23a</span></a></li>
         </ul>
       </aside>
 
